Correción de errores, modificación en pom.xml